--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
+    "mysql2": "^1.6.5",
     "path": "^0.12.7",
     "sequelize": "^5.8.6"
   }
